finally fixed spacing right issue on list grid template

--- a/app/stylesheets/list-grid-template.less
+++ b/app/stylesheets/list-grid-template.less
@@ -94,7 +94,7 @@
 
 .List-Grid-Template .List-Grid-Group-Column-Edit .Content-item{
   text-align: left;
-  width: 78%;
+  width: 70%;
   display:inline-block;
 }
 
@@ -115,9 +115,7 @@
   width: 64%;
 }
 
-.Content-item{
-  max-width: 253px;
-}
+
 
 .List-Grid-Template{
   .list-grid-row-container{
@@ -125,6 +123,16 @@
     width: 35%;
   }
   .List-Grid-Row-Edit{
+    .Content-item{
+      max-width: 253px;
+      width: 70%;
+    }
+    .Content-image-container{
+      width: 100%;
+    }
+    .Content-title{
+      width: 61%;
+    }
     .List-Grid-Group-Column-Small-Edit{
       width: 100%;
     }
